--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <title>
-        Foundation Models for Time Series Analysis: A Tutorial and Survey
+        Foundation Models for Spatio-Temporal Data Science: A Tutorial and Survey
     </title>
 
     <!-- Bootstrap Core CSS -->
