--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="KDD'24 TUTORIAL-FM4TS: Foundation Models for Time Series">
+    <meta name="description" content="KDD'25 TUTORIAL-FM4ST: Foundation Models for Spatio-Temporal Data Science">
     <meta property="og:image" content="./img/Facebook.jpg">
     <meta property="og:type" content="website">
     <!-- <meta property="og:description" content="7th SIGKDD Workshop on Mining and Learning from Time Series (MiLeTS)"> -->
@@ -107,13 +107,13 @@
 
                 <br>               
                 
-                <div class="intro-heading">FM4TS: KDD'24 Tutorial</div>
+                <div class="intro-heading">FM4ST: KDD'25 Tutorial</div>
                 <br><br>
 
                 <br><br>                
                 <div class="intro-heading-large"> Foundation Models </div>
                 <br><br>
-                <div class="intro-heading-large">for Time Series: </div>
+                <div class="intro-heading">for Spatio-Temporal Data Science: </div>
                 <br><br>
 
 
@@ -138,7 +138,7 @@
                 <div class="col-md-12" >
 
                     <p class="large text-muted ">
-                        Time series analysis stands as a focal point within the data mining community, serving as a cornerstone for extracting valuable insights crucial to a myriad of real-world applications. Recent advancements in Foundation Models (FMs) have fundamentally reshaped the paradigm of model design for time series analysis, boosting various downstream tasks in practice. These innovative approaches often leverage pre-trained or fine-tuned FMs to harness generalized knowledge tailored specifically for time series analysis. In this survey, we aim to furnish a comprehensive and up-to-date overview of FMs for time series analysis. While prior surveys have predominantly focused on either the application or the pipeline aspects of FMs in time series analysis, they have often lacked an in-depth understanding of the underlying mechanisms that elucidate why and how FMs benefit time series analysis. To address this gap, our survey adopts a model-centric classification, delineating various pivotal elements of time-series FMs, including model architectures, pre-training techniques, adaptation methods, and data modalities. Overall, this survey serves to consolidate the latest advancements in FMs pertinent to time series analysis, accentuating their theoretical underpinnings, recent strides in development, and avenues for future research exploration.
+                        Spatio-Temporal (ST) data science, which includes sensing, managing, and mining large-scale data across space and time, is fundamental to understanding complex systems in domains such as urban computing, climate science, and intelligent transportation. Traditional deep learning approaches have significantly advanced this field, particularly in the stage of ST data mining. However, these models remain task-specific and often require extensive labeled data. Inspired by the success of Foundation Models (FM), especially large language models, researchers have begun exploring the concept of Spatio-Temporal Foundation Models (STFMs) to enhance adaptability and generalization across diverse ST tasks. Unlike prior architectures, STFMs empower the entire workflow of ST data science, ranging from data sensing, management, to mining, thereby offering a more holistic and scalable approach. Despite rapid progress, a systematic study of STFMs for ST data science remains lacking. This survey aims to provide a comprehensive review of STFMs, categorizing existing methodologies and identifying key research directions to advance ST general intelligence.
                     </p>
 
 
@@ -609,6 +609,22 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Reference</h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-1 text-justify">
+                &nbsp;
+            </div>
+
+            <div class="col-lg-10 text-justify">
+                <p class="row large text-muted">
+                    <a href="https://arxiv.org/abs/2503.13502" target="_blank">* Foundation Models for Spatio-Temporal Data Science, KDD 2025.</a>
+                </p>
+            </div>
+
+            <div class="col-lg-1 text-justify">
+                &nbsp;
             </div>
         </div>
 
