--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
                 <br><br>
 
 
-                <br><br>              
-                <div class="intro-heading"> Theory, Algorithms, and Applications  </div>
-                <br><br>
+                <div class="" >8:00 AM-11:00 AM, August 3rd,2025, Toronto, ON, Canada</div>
+                <div class="" >Room 713B</div>
+                <div class="" >Held in conjunction with the 31st ACM SIGKDD 2025</div>
+<!--                <br><br>              -->
+<!--                <div class="intro-heading"> Theory, Algorithms, and Applications  </div>-->
+<!--                <br><br>-->
                 <!-- <div class="intro-heading-welcome" >Welcome!</div> -->
             </div>
         </div>
@@ -258,12 +261,12 @@
         <table class="tableizer-table">
             <thead><tr class="tableizer-firstrow"><th style="width:15%">Time</th><th>Speaker</th><th>Title</th></tr></thead><tbody>
 
-            <tr><td>8:00 am - 8:10 am </td>  <td> TBD </td> <td> Opening and Introduction </td></tr>
-            <tr><td>8:10 am - 8:20 am </td><td> TBD &nbsp;</td><td> Background of foundation models and spatio-temporal data</td></tr>
-            <tr><td>8:20 am - 9:00 am </td><td>TBD</td><td>LLM-based STFMs</td></tr>
+            <tr><td>8:00 am - 8:10 am </td>  <td> Qingsong Wen </td> <td> Opening and Introduction </td></tr>
+            <tr><td>8:10 am - 8:20 am </td><td> Qingsong Wen &nbsp;</td><td> Background of foundation models and spatio-temporal data</td></tr>
+            <tr><td>8:20 am - 9:00 am </td><td>Qingsong Wen</td><td>LLM-based STFMs</td></tr>
             <tr><td>9:00 am - 9:30 am </td><td> - </td><td>Break</td></tr>
-            <tr><td>9:30 am - 10:30 am </td><td> TBD </td><td>STFMs pre-trained from scratch</td></tr>
-            <tr><td>10:30 am - 11:00 am </td><td> TBD </td><td> Future Directions  </td></tr>
+            <tr><td>9:30 am - 10:30 am </td><td> Yuxuan Liang </td><td>STFMs pre-trained from scratch</td></tr>
+            <tr><td>10:30 am - 11:00 am </td><td> Yuxuan Liang </td><td> Future Directions  </td></tr>
 
             </tbody></table>
      
