--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                 <br><br>
 
 
-                <div class="" >8:00 AM-11:00 AM, August 3rd,2025, Toronto, ON, Canada</div>
-                <div class="" >Room 713B</div>
-                <div class="" >Held in conjunction with the 31st ACM SIGKDD 2025</div>
+                <div class="header-info" >8:00 AM-11:00 AM, August 4th,2025, Toronto, ON, Canada</div>
+                <div class="header-info" >Room 713B</div>
+                <div class="header-info" >Held in conjunction with the 31st ACM SIGKDD 2025</div>
 <!--                <br><br>              -->
 <!--                <div class="intro-heading"> Theory, Algorithms, and Applications  </div>-->
 <!--                <br><br>-->
