--- a/index.html
+++ b/index.html
@@ -235,7 +235,21 @@
                     <br></br>
                     Zoom Link: <a href= target="_blank" style="color:RoyalBlue"></a></br>
                 </h3-->
-          
+
+<!--                <h3 class="section-subheading text-muted">-->
+<!--                    Slides: <a href= target="_blank" style="color:RoyalBlue"></a>-->
+<!--                </h3>-->
+
+                <p>
+                  <a
+                    href="slides/FM4ST_Tutorial_Slides_V3.pdf"
+                    download="FM4ST_Tutorial.pdf"
+                    class="btn btn-primary"
+                    style="margin-top: 20px;">
+                      Slides
+                  </a>
+                </p>
+
             </div>
         </div>
 
