--- a/index.html
+++ b/index.html
@@ -135,6 +135,15 @@
                 <div class="col-lg-12 text-center">
                     <!-- <h2 class="section-heading">Introduction</h2> -->
                     <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
+                     <p>
+                  <a
+                    href="slides/FM4ST_Tutorial_Slides_V3.pdf"
+                    download="FM4ST_Tutorial.pdf"
+                    class="btn btn-primary"
+                    style="margin-top: 20px;">
+                      Download Slides
+                  </a>
+                </p>
                 </div>
             </div>
             <div class="row text-justify">
