--- a/index.html
+++ b/index.html
@@ -701,6 +701,70 @@
 
 <!--<section>-->
 
+<!-- Slides Section -->
+<section id="slides" class="bg-mid-gray">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            <h2 class="section-heading">Tutorial Slides</h2>
+        </div>
+    </div>
+
+    <!-- PDF Viewer Container -->
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="pdf-viewer-container" style="background: white; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); margin: 20px 0;">
+                <!-- PDF Controls -->
+                <div class="pdf-controls" style="background: #f8f9fa; padding: 15px; border-radius: 8px 8px 0 0; border-bottom: 1px solid #dee2e6;">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <span class="page-info" style="font-weight: bold; font-size: 16px;">
+                                Total Pages: <span id="totalPages">98</span>
+                            </span>
+                        </div>
+                        <div class="col-md-6 text-right">
+                            <div class="btn-group" role="group">
+                                <button type="button" class="btn btn-success" onclick="downloadPDF()">
+                                    <i class="fa fa-download"></i> Download PDF
+                                </button>
+                                <button type="button" class="btn btn-info" onclick="openFullscreen()">
+                                    <i class="fa fa-expand"></i> Fullscreen
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- PDF Embed -->
+                <div class="pdf-embed-container" style="position: relative; height: 600px; overflow: hidden;">
+                    <iframe
+                        id="pdfViewer"
+                        src="./slides/FM4ST_Tutorial_Slides_V3.pdf"
+                        style="width: 100%; height: 100%; border: none; border-radius: 0 0 8px 8px;"
+                        onload="onPDFLoad()">
+                    </iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Additional Info -->
+    <div class="row text-center" style="margin-top: 20px;">
+        <div class="col-md-12">
+            <p class="text-muted">
+                <strong>File:</strong> FM4ST@KDD2025.pdf |
+                <strong>Size:</strong> ~17 MB |
+                <strong>Last updated:</strong> August 2025
+            </p>
+            <p class="text-muted">
+                Use the navigation buttons above to browse through the slides, or download the complete PDF for offline viewing.
+            </p>
+        </div>
+    </div>
+</div>
+</section>
+
+
 <section id="papers" class="bg-mid-gray">
     <div class="container">
         <div class="row">
@@ -1246,6 +1310,29 @@
 
     </section-->
 
+    <script>
+
+    function downloadPDF() {
+        const link = document.createElement('a');
+        link.href = './slides/FM4ST_Tutorial_Slides_V3.pdf';
+        link.download = 'FM4ST_Tutorial_Slides_V3.pdf';
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+    }
+
+    function openFullscreen() {
+        const iframe = document.getElementById('pdfViewer');
+        if (iframe.requestFullscreen) {
+            iframe.requestFullscreen();
+        } else if (iframe.webkitRequestFullscreen) {
+            iframe.webkitRequestFullscreen();
+        } else if (iframe.msRequestFullscreen) {
+            iframe.msRequestFullscreen();
+        }
+    }
+
+    </script>
 
     <!-- jQuery -->
     <script src="./js/jquery.js"></script>
